@@ -28,6 +28,12 @@ Version 3.2.0 - in development
   and "like" and "not like" operators to support SQL "%" wildcard matching and "=~"
   operator to support regex matching.
 
+- Added `indent` and `base_1` arguments to `pyparsing.testing.with_line_numbers`. When
+  using `with_line_numbers` inside a parse action, set `base_1`=False, since the
+  reported `loc` value is 0-based. `indent` can be a leading string (typically of
+  spaces or tabs) to indent the numbered string passed to `with_line_numbers`.
+  Added while working on #557, reported by Bernd Wechner.
+
 
 Version 3.1.4 - August, 2024
 ----------------------------
